charts/templates/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: student-api
  template:
    metadata:
      labels:
        app: student-api
    spec:
      containers:
      - name: student-api-container
        image: asahran/student_api_server
        ports:
        - containerPort: 8080
