charts/templates/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-api-service
spec:
  selector:
    app: student-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
