charts/templates/api-ingress.yaml
# No idea what this is

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  rules:
  - host: your-api-host.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: student-api-service
            port:
              number: 80
